--- a/popup.html
+++ b/popup.html
@@ -46,7 +46,7 @@
         color: #ffffff;
     }
     .form-group { margin-bottom: 15px; }
-    .form-row { display: flex; gap: 10px; }
+    .form-row { display: flex; gap: 10px; align-items: flex-end; }
     .col { flex: 1; }
     label { display: block; margin-bottom: 5px; font-size: 14px; font-weight: bold; }
     input::placeholder { color: #888; }
@@ -75,7 +75,8 @@
 
     <div class="tab-nav">
         <button class="tab-btn active" data-tab="tab-general">基本設定</button>
-        <button class="tab-btn" data-tab="tab-dictionary">単語登録</button> <button class="tab-btn" data-tab="tab-ng">NG設定</button>
+        <button class="tab-btn" data-tab="tab-dictionary">単語登録</button>
+        <button class="tab-btn" data-tab="tab-ng">NG設定</button>
         <button class="tab-btn" data-tab="tab-profiles">プロファイル</button>
     </div>
 
@@ -131,6 +132,10 @@
             <label for="opacity">透過度: <span class="badge" id="opacityValue"></span></label>
             <input type="range" id="opacity" min="0" max="1" step="0.1" style="width:100%;">
         </div>
+        <div class="form-row">
+            <div class="col"><label for="strokeWidth">縁取りの太さ(px)</label><input type="number" id="strokeWidth" min="0" step="0.1"></div>
+            <div class="col"><label for="strokeColor">縁取りの色</label><input type="color" id="strokeColor"></div>
+        </div>
         <div class="form-group">
             <label for="position">表示方法</label>
             <select id="position"><option value="top_priority">上から優先</option><option value="bottom_priority">下から優先</option><option value="random">ランダム</option></select>
@@ -148,12 +153,13 @@
             <input type="text" id="customFontFamily" placeholder="例: 'Noto Sans JP', '游ゴシック体'">
         </div>
         <h4>フローコメント色設定</h4>
-        <div class="col"><label for="normalColor">通常</label><input type="color" id="normalColor"></div>
-                    <div class="col"><label for="memberColor">メンバー</label><input type="color" id="memberColor"></div>
-                    <div class="col"><label for="moderatorColor">モデレーター</label><input type="color" id="moderatorColor"></div>
-                    <div class="col"><label for="superchatColor">スーパーチャット</label><input type="color" id="superchatColor"></div>
-                    <div class="col"><label for="membershipColorFlow">新メンバー</label><input type="color" id="membershipColorFlow"></div>
-            </div>
+        <div class="form-row">
+            <div class="col"><label for="normalColor">通常</label><input type="color" id="normalColor"></div>
+            <div class="col"><label for="memberColor">メンバー</label><input type="color" id="memberColor"></div>
+            <div class="col"><label for="moderatorColor">モデレーター</label><input type="color" id="moderatorColor"></div>
+            <div class="col"><label for="superchatColor">スーパーチャット</label><input type="color" id="superchatColor"></div>
+            <div class="col"><label for="membershipColorFlow">新メンバー</label><input type="color" id="membershipColorFlow"></div>
+        </div>
     </div>
     
     <div id="tab-dictionary" class="tab-content">
@@ -163,6 +169,7 @@
             <textarea id="dictionary" rows="12" placeholder="例: Holo,ホロ&#x0a;Gura,ぐら"></textarea>
         </div>
     </div>
+
     <div id="tab-ng" class="tab-content">
         <h4>NG設定</h4>
         <div class="form-group">
